# CPP-Deep-Learning

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  simple_example.cpp  titanic.cpp
include/: activation.h  layer.h  loss.h  nn.hpp  serialization.h
include/nn/: activation.h  layer.h  loss.h
models/: titanic.dat.bk
src/: CMakeLists.txt  activation.cpp  layer.cpp  loss.cpp  main.cpp  nn.cpp
src/nn/: CMakeLists.txt  activation.cpp  layer.cpp  loss.cpp  serialization.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/nn/: CMakeLists.txt  test_activation.cpp  test_sigmoid_model.cpp
